# verinfast

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  VERSION.py  make_version.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bundle.yml  release.yml
src/verinfast/: agent.py  code_scan.py  config.py  config.yaml  pygments_patch.py  reset.sh  upload.py  user.py
src/verinfast/agent/: __init__.py  core.py
src/verinfast/agent/cloud/: __init__.py  base.py
src/verinfast/agent/scanner/: __init__.py  base.py  file_utils.py  git_utils.py  repo_handlers.py  scanners.py
src/verinfast/agent/upload/: __init__.py  base.py  file_handler.py  http_client.py  validators.py
src/verinfast/cloud/: cloud_dataclass.py
src/verinfast/cloud/aws/: blocks.py  costs.py  get_profile.py  instance_utils.py  instances.py  metrics.py  regions.py
src/verinfast/cloud/azure/: blocks.py  costs.py  instances.py
src/verinfast/cloud/gcp/: blocks.py  instances.py  zones.py
src/verinfast/config/: __init__.py  base.py  constants.py
src/verinfast/config/modules/: __init__.py  cloud.py  code.py  upload.py
src/verinfast/config/parsers/: __init__.py  args.py  file.py
src/verinfast/config/utils/: __init__.py  dates.py  printable.py
src/verinfast/dependencies/: walk.py
src/verinfast/dependencies/pygments-tsx/: pygments_tsx.py  setup.py
src/verinfast/dependencies/walkers/: README.md  classes.py  composer.py  dockerwalker.py  gemwalker.py  go.py  maven.py  npm.py  nuget.py  package_lock.py  python.py
src/verinfast/sast/: opengrep.py
src/verinfast/system/: sysinfo.py
src/verinfast/templates/: results.j2
src/verinfast/utils/: git_metrics.py  license.py  utils.py
templates/: results.j2
tests/: Blank.tsx  aws_conf.yaml  aws_dash.yaml  aws_profile.yaml  composer.yaml  config.yaml  delete_temp.yaml  dependency_test.yaml  gcp_conf.yaml  gemfile  package.json  requirements.txt  semgrep.db  str_conf.yaml  test.csproj  test_args.py  test_aws.py  test_cache.py  test_costs.py  test_dependency.py  test_dry.py  test_gcp.py  test_local.py  test_log.txt  test_manifest_upload.py  test_non_unicode.py  test_oss.py  test_package_lock.py  test_print_cloud_provider.py  test_repo_name.py  test_sysinfo.py  test_template.py  test_truncate.py  test_tsx.py  test_yaml.py  win_conf.yaml
tests/fixtures/: bad_password.py  fixtures.dependencies.json
tests/fixtures/aws/: aws-cost-bar.json
tests/fixtures/docker/: Dockerfile  docker-compose.yml
tests/fixtures/gemwalker/: gemfile
tests/fixtures/gemwalker/gemnest/: gemfile
tests/fixtures/package_lock_walker/: package-lock.json
tests/fixtures/python_walker/: requirements.txt
tests/fixtures/python_walker/pipfile/: Pipfile
tests/fixtures/python_walker/pyproject_pep621/: pyproject.toml
tests/fixtures/python_walker/pyproject_poetry/: pyproject.toml
tests/fixtures/python_walker/requirements_in/: requirements.in
tests/fixtures/url_support/: test_repo_urls.json
verinfast/: agent.py  config.yaml  reset.sh
verinfast/aws/: aws.py
verinfast/cloud/: aws.py  az_parse.py
verinfast/cloud/aws/: aws.py  blocks.py  instances.py  regions.py
verinfast/cloud/azure/: blocks.py  instances.py
verinfast/cloud/gcp/: blocks.py  instances.py
verinfast/dependencies/: walk.py
verinfast/dependencies/walkers/: README.md  classes.py  maven.py  npm.py  nuget.py
verinfast/results/: PicklePics.git.sizes.json  PicklePics.git.stats.err  PicklePics.git.stats.json  small-test-repo.git.findings.err  small-test-repo.git.findings.json  small-test-repo.git.sizes.json  small-test-repo.git.stats.json
verinfast/testfiles/: dependencies_sample.json
verinfast/utils/: utils.py
