[build-system]
requires = [
  "hatchling",
  "setuptools",
  "setuptools_scm[toml]>=6.0",
  "build",
  "hatch-requirements-txt"
]
build-backend = "hatchling.build"

[project]
name = "verinfast"
authors = [
  { name="Jason Nichols", email="github@verinfast.com" },
  { name="Sean Conrad", email="github@verinfast.com"}
]
description = "This tool safely and securely analyzes applications for benchmarking."
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/VerinFast/verinfast"
"Bug Tracker" = "https://github.com/VerinFast/verinfast/issues"
"Source" = "https://github.com/VerinFast/verinfast"

[project.scripts]
verinfast = "verinfast.agent:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.version]
path = "VERSION.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
