[build-system]
requires = [
  "hatchling",
  "setuptools",
  "setuptools_scm[toml]>=6.0",
  "build",
]
build-backend = "hatchling.build"

[project]
name = "verinfast"
authors = [
  { name="Jason Nichols", email="github@verinfast.com" },
  { name="Sean Conrad", email="github@verinfast.com"}
]
description = "This tool safely and securely analyzes applications for benchmarking."
readme = "README.md"
requires-python = ">=3.11,<=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dependencies = [
    "azure-identity~=1.25.0",
    "azure-mgmt-compute~=37.2.0",
    "azure-mgmt-monitor~=7.0.0",
    "azure-mgmt-network~=30.2.0",
    "azure-mgmt-resource~=25.0.0",
    "azure-mgmt-storage~=24.0.0",
    "azure-monitor-query~=1.4.0",
    "boto3~=1.42.0",
    "defusedxml~=0.7.1",
    "gemfileparser~=0.8.0",
    "google-cloud-compute>=1.14.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-monitoring>=2.15.0",
    "httpx[http2]~=0.28.1",
    "Jinja2==3.1.6",
    "johnnydep~=1.20.6",
    "modernmetric>=1.5.9",
    "pygments-tsx>=1.0.1",
    "psutil~=7.2.0",
    "pyyaml~=6.0.2",
    "tomli>=2.0.0; python_version < '3.11'",
    "semgrep==1.136.0; python_version == '3.9'",
    "semgrep==1.152.0; python_version != '3.9'",
    "windows-curses~=2.4.0; sys_platform == 'win32'",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
]

[project.urls]
"Homepage" = "https://github.com/VerinFast/verinfast"
"Bug Tracker" = "https://github.com/VerinFast/verinfast/issues"
"Source" = "https://github.com/VerinFast/verinfast"

[project.scripts]
verinfast = "verinfast.agent:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.version]
path = "VERSION.py"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
^/VERSION\.py$
'''
